--- a/trunk/keyclick/analyze.phtml
+++ b/trunk/keyclick/analyze.phtml
@@ -262,7 +262,7 @@ $connected = (ConnectSelectDbInstanceUNPUBLISHED($db_link) == "TRUE");
                     //
                  case "zip":
                  default:
-                   ZipDump($db_link,$sql_query,$parent_enumeral);
+                   ZipDump($db_link,$sql_query,$bpn,$parent_enumeral);
                    break;
                  }
               }
